<resources>
    <string name="app_name">SaleskenV1</string>
    <string name="sales">sales</string>
    <string name="server_ip">http://beta.talentify.in/salesken-backend/api/</string>
    <string name="shared_preference_key">SaleskenAppComplexKey</string>

    <string name="ken">ken</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Forgot Password ?</string>
    <string name="login">Sign In</string>

    <string name="email">Email</string>
    <string name="sent">Sent</string>
    <string name="forgot_text">If you have forgotten your password you can\nreset it here.</string>

    <string name="email_sent">Email sent !</string>
    <string name="check_email">Check your Email ""\nto and enter the verification code below.</string>
    <string name="cues_support">Real time\nCues Support</string>
    <string name="introduction_text1">Help your sales team at the exact moment they need it.\nHelp them up their game and win!</string>
    <string name="tools_support">It works with all\nyour favourite tools</string>
    <string name="introduction_text2">Get a ring side seat to your customer sales-rep interactions. Know what they are doing right &amp; where they need help.</string>
    <string name="analytics_support">Get\nanalytical reports</string>
    <string name="introduction_text3"> lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs</string>

    <string name="disposition">Disposition</string>
    <string name="disposition_msg">How did the call go ?</string>
    <string name="no_response">No Response </string>
    <string name="call_dropped">Call Dropped </string>
    <string name="voice_mail">Voice Mail</string>
    <string name="wrong_number">Wrong Number</string>
    <string name="wrong_person">Wrong Person</string>
    <string name="call_answered">Call Answered </string>

    <string name="no_resp_msg">Oops Seems like lead is busy !</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="msg">Message</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>

    <string name="lost_lead">Lead Lost</string>
    <string name="follow_up">Follow Up </string>
    <string name="schedule">Schedule Activity </string>
    <string name="lead_won">Lead Won </string>
    <string name="dnd">DND </string>
    <string name="edit_lead">Edit Lead Details</string>

    <string name="create_contact">Create Contact </string>
    <string name="save_contact">Save to contacts </string>
    <string name="company_name">Company Name </string>
    <string name="first_name">First name </string>
    <string name="last_name">Last name </string>
    <string name="designation">Designation </string>
    <string name="mobile">Mobile </string>

    <string name="my_account">My accounts </string>
    <string name="edit_info">Edit Information</string>
    <string name="name">Name </string>
    <string name="contact_number">Contact Number </string>
    <string name="sip_number">SIP Number </string>
    <string name="language">Language </string>

    <string name="current_password">Current Password </string>
    <string name="new_password">New Password </string>
    <string name="confirm_password">Confirm Password </string>

    <string name="cues_1">We are here to help you!</string>
    <string name="cues_2">Auto generated cues will help you engage the leads better</string>
    <string name="schedule_msg"> Wow ! Seems like the customer\nis  interested. </string>
    <string name="feroz_channel_name">feroz_channel</string>

    <string name="feroz_channel_description">feroz_channel_description</string>
</resources>
