<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mask_group_94"
    tools:context=".activity.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toTopOf="@+id/forgotText"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/app_icon" />

    <TextView
        android:id="@+id/sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/sales"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/app_icon"
        app:layout_constraintStart_toEndOf="@+id/app_icon"
        app:layout_constraintTop_toTopOf="@+id/app_icon" />

    <TextView
        android:id="@+id/ken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/ken"
        android:textColor="@color/theme"
        android:textSize="@dimen/h1"
        app:layout_constraintBottom_toBottomOf="@+id/sales"
        app:layout_constraintStart_toEndOf="@+id/sales"
        app:layout_constraintTop_toTopOf="@+id/sales" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:hintTextAppearance="@style/MyHintStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/app_icon"
        app:layout_constraintTop_toBottomOf="@+id/forgotText"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/p1"
            android:theme="@style/MyEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/theme_color"
        android:fontFamily="sans-serif-medium"
        android:text="Send"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_email"
        app:layout_constraintStart_toStartOf="@+id/input_layout_email"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_email" />

    <TextView
        android:id="@+id/forgotText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5sp"
        android:lines="2"
        android:text="@string/forgot_text"
        android:textColor="@color/black2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_email"
        app:layout_constraintStart_toStartOf="@+id/input_layout_email"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="56dp"
        android:background="@color/transparent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/app_icon"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/baseline_arrow_back_black_24" />


</androidx.constraintlayout.widget.ConstraintLayout>