<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/mask_group_94"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_username"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@mipmap/group_3200" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:hintTextAppearance="@style/MyHintStyle"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/app_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/p1"
            android:theme="@style/MyEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:hintTextAppearance="@style/MyHintStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_username"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/input_layout_username"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_username">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/p1"
            android:paddingEnd="40dp"
            android:paddingRight="40dp"
            android:theme="@style/MyEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/showpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/transparent"
        android:src="@mipmap/baseline_visibility_black_24"
        android:tint="@color/greyishBrown"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/input_layout_password"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_password"
        app:layout_constraintTop_toTopOf="@+id/input_layout_password" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/forgotpassword"
        android:textColor="@color/theme_color"
        app:layout_constraintStart_toStartOf="@+id/input_layout_password"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_password" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/theme_color"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_password"
        app:layout_constraintStart_toStartOf="@+id/input_layout_password"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

</androidx.constraintlayout.widget.ConstraintLayout>